# gmm-ct

./: .gitignore  ATI_notebook.ipynb  CHANGELOG.md  CharlieWeights.ipynb  QUICK_REFERENCE.md  README.md  Untitled.ipynb  _inspect_results.py  presentation.ipynb  presentation.tex  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
configs/: reconstruct.yaml  simulate.yaml
data/: README.md
data/simulated/20260218_163511_seed40_N2/: true_parameters.md
data/simulated/20260218_174519_seed40_N2/: true_parameters.md
docs/: CONCLUSION_STRUCTURE.md  NUMERICAL_EXPERIMENTS.md  NUMERICAL_RESULTS_STRUCTURE.md  RECONSTRUCTION_ALGORITHM_STRUCTURE.md
docs/guides/: quickstart.md
docs/research_notes/: OMEGA_ESTIMATION_SOLUTION.md  PEAK_INFLECTION_TEST_RESULTS.md  REFACTORING_SUMMARY.md  ROTATION_TEST_README.md  ROTATION_VERIFICATION_RESULTS.md  STABILITY_EXPERIMENT.md
examples/: README.md  basic_reconstruction.py
experiments/demos/: debug_dtw.py  demo_dtw_landscape_plot.py  explain_fft_omega_extraction.py  run_soft_dtw_test.py  run_stability_experiment.py  verify_dtw_integration.py  verify_rotation_fix.py  verify_soft_dtw.py
experiments/deprecated/: README.md  __init__.py.bak  compare_stability_experiments.py  single_projection_experiment.py
experiments/notebooks/: new_rotation_experiment.ipynb
experiments/projection_sweep/: projection_sweep.py
experiments/stability/: compare_stability_experiments.py  run_stability_experiment.py  stability_experiment.py  test_stability_experiment.py  visualize_stability_results.py
gmm_ct/: __init__.py  cli.py  reconstruct.py  simulation.py
gmm_ct/config/: __init__.py  defaults.py  yaml_config.py
gmm_ct/core/: __init__.py  forward_model.py  initialization.py  models.py  optimizer.py  reconstruction.py  solvers.py
gmm_ct/estimation/: __init__.py  omega.py  peak_analysis.py
gmm_ct/utils/: __init__.py  generators.py  geometry.py  helpers.py
gmm_ct/visualization/: __init__.py  animations.py  diagnostics.py  publication.py
scripts/: analyse.py  polish_single_gaussian.py  reconstruct.py  replot_projection_modes.py  run_experiments.py
tests/: __init__.py  conftest.py
tests/unit/: test_dtw_omega.py  test_dtw_smoothness.py  test_dtw_vs_soft_dtw.py  test_dtw_with_trajectory.py  test_efficiency_comparison.py  test_geometric_time_correction.py  test_isotropic_baseline.py  test_omega_estimation_integration.py  test_peak_inflection_timing.py  test_peak_inflection_with_motion.py  test_refactored_trajectory.py  test_rotation.py  test_rotation_animation.py  test_rotation_matrix_direct.py  test_soft_dtw.py  test_soft_dtw_minimal.py  test_spectral_multiple_omegas.py  test_spectral_omega_estimation.py  test_stability_experiment.py  test_tensor_conversion.py  test_trajectory_correction.py
(+157 files in other folders)
